--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,7 @@
     />
     
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <script src="https://accounts.google.com/gsi/client" async defer></script>
     
     <title>Show your work</title>
   </head>
